<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:background="@drawable/login_page"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".admin.adminActivity">


    <ProgressBar
        android:id="@+id/admin_login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"/>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/email_login_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/admin_email"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <EditText
            android:layout_marginTop="18dp"
            android:id="@+id/admin_password"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/adminLogin"
            android:layout_width="match_parent"
            android:text="@string/login"
            android:textColor="@color/black"
            android:layout_marginTop="18dp"
            android:textStyle="bold"
            android:textSize="19sp"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="16dp"
            android:text="@string/or"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/adminSignup"
            android:layout_width="match_parent"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:layout_marginTop="18dp"
            android:textStyle="bold"
            android:textSize="19sp"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"/>


    </LinearLayout>


</LinearLayout>