<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    app:cardCornerRadius="8dp"
    android:padding="16dp">


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_above="@+id/username_layout"
           android:layout_marginTop="48dp"
           android:orientation="vertical">

           <ImageView
               android:id="@+id/ivItemImage"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:adjustViewBounds="true"
               android:contentDescription="@string/image_description"
               android:cropToPadding="true"
               android:scaleType="fitXY"
               android:src="@drawable/fooditwallpp" />

           <TextView
               android:id="@+id/tvItemName"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:padding="10dp"
               android:text="@string/admin_item_text"
               android:textSize="18sp"
               android:textStyle="bold" />

           <TextView
               android:id="@+id/tvItemDescription"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="4dp"
               android:padding="10dp"
               android:paddingStart="15dp"
               android:paddingTop="15dp"
               android:paddingEnd="15dp"
               android:text="@string/item_description"
               android:textSize="18sp" />

           <TextView
               android:id="@+id/tvItemPrice"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:padding="5dp"
               android:text="@string/item_price"
               android:textSize="16sp"
               android:textStyle="bold" />




       </LinearLayout>


   </androidx.cardview.widget.CardView>