<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_page"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".user.userSignupActivity">
    <ProgressBar
        android:id="@+id/user_signup_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">
    </ProgressBar>
    <LinearLayout
        android:id="@+id/user_acc_login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/user_name_account"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingBottom="16dp">

        </EditText>

        <AutoCompleteTextView
            android:id="@+id/user_email_account"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:autofillHints="no"
            />

        <EditText
            android:id="@+id/user_password_account"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingBottom="16dp"
            android:autofillHints="no">

        </EditText>



        <Button
            android:id="@+id/user_email_create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textSize="19sp"
            android:text="@string/sign_up"
            android:layout_marginTop="18dp"
            android:textColor="@color/black">

        </Button>

    </LinearLayout>

</LinearLayout>