<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:background="@drawable/signup_page"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".admin.AdminSignupActivity">

    <ProgressBar
        android:id="@+id/admin_signup_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"/>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/admin_acct_login_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:id="@+id/admin_user_name_account"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingBottom="16dp"/>


        <AutoCompleteTextView
            android:id="@+id/admin_email_account"
            android:hint="@string/email_hint"
            android:layout_marginTop="16dp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <EditText
            android:layout_marginTop="18dp"
            android:id="@+id/admin_password_account"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:importantForAutofill="no" />



        <Button
            android:id="@+id/admin_email_create_account_button"
            android:layout_width="match_parent"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:layout_marginTop="18dp"
            android:textStyle="bold"
            android:textSize="19sp"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"/>



    </LinearLayout>
</LinearLayout>